--- a/index.html
+++ b/index.html
@@ -12,16 +12,25 @@
     <section>
         <main>
             <div class="homepage">
-                <!--  -->
-                <nav class="navbar navbar-expand-lg">
-                    <div class="container-fluid">
-                      <div class="ms-auto">
-                        <div class="navbar-nav mt-2 pe-3">
-                            <a class="nav-link active text-white fs-5" aria-current="page" href="#">Login</a>  
+                <!-- Start Navbar -->
+                  <nav class="navbar navbar-expand-lg">
+                      <div class="container-fluid">
+                        <div class="ms-auto">
+                          <div class="navbar-nav mt-2 pe-3">
+                              <a class="nav-link active text-white fs-5" aria-current="page" href="#">Login</a>  
+                          </div>
                         </div>
                       </div>
-                    </div>
                   </nav>
+                  <!-- End Navbar  -->
+
+                  <!-- Start Content  -->
+                    <div class="hero">
+                      <img src="asset/img/PameranLogo.png" width="500" alt="">
+                      <p>Lorem ipsum, dolor sit amet consectetur <br> adipisicing elit. Eligendi, quod.</p>
+                      <a href="" class="btn btn-warning"> Baca Selengkapnya</a>
+                    </div>
+                  <!-- End Content -->
             </div>
         </main>
     </section>
