--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 
     <section>
         <main>
+          <!-- Start HomePage -->
             <div class="homepage">
                 <!-- Start Navbar -->
                   <nav class="navbar navbar-expand-lg">
                       <div class="container-fluid">
                         <div class="ms-auto">
                           <div class="navbar-nav mt-2 pe-3">
-                              <a class="nav-link active text-white fs-5" aria-current="page" href="#">Login</a>  
+                              <button class="btn btn-primary"><a class="nav-link active text-white" aria-current="page" href="#">Login</a> </button>  
                           </div>
                         </div>
                       </div>
@@ -32,6 +33,35 @@
                     </div>
                   <!-- End Content -->
             </div>
+            <!-- End HomePage -->
+
+            <!-- Start Description -->
+              <div class="description container-fluid">
+                  <div class="row justify-content-center col-xl-12 col-12 col-md-12 col-sm-12 mt-5 gap-2 mx-auto">
+                      <div class="row justify-content-center col-xl-4 col-12 col-sm-12 col-md-4">
+                          <div class="des">
+                            <img src="asset/img/deskripsi.png" class="mb-3" width="100" alt="">
+                            <h3 class="fw-bold">Deskripsi</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, corporis!</p>
+                          </div>
+                      </div>
+                      <div class="row justify-content-center col-xl-4 col-12 col-sm-12 col-md-4">
+                          <div class="tujuan">
+                            <img src="asset/img/deskripsi.png" class="mb-3" width="100" alt="">
+                            <h3 class="fw-bold">Tujuan</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, corporis!</p>
+                          </div>
+                      </div>
+                      <div class="row justify-content-center col-xl-4 col-12 col-sm-12 col-md-4">
+                          <div class="latar">
+                            <img src="asset/img/deskripsi.png" class="mb-3" width="100" alt="">
+                            <h3 class="fw-bold">Latar Belakang</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, corporis!</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+            <!-- End Description -->
         </main>
     </section>
 
