--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
                 <!-- Start Navbar -->
                   <nav class="navbar navbar-expand-lg">
                       <div class="container-fluid">
+                        <img src="asset/img/LogoSmk.png" class=" mt-2 ms-4" width="70" alt="">
+                        <img src="asset/img/LogoRPL.png" class="mt-2" width="60" alt="">
                         <div class="ms-auto">
-                          <div class="navbar-nav mt-2 pe-3">
-                              <button class="btn btn-primary"><a class="nav-link active text-white" aria-current="page" href="#">Login</a> </button>  
+                          <div class="navbar-nav mt-2 pe-4 d-flex flex-row gap-3">
+                            <a class="nav-link active text-white" aria-current="page" href="#">About</a>
+                            <a class="nav-link text-white" href="#">Our Team</a>
                           </div>
                         </div>
                       </div>
