--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="hero">
                       <img src="asset/img/PameranLogo.png" width="500" alt="">
                       <p>Lorem ipsum, dolor sit amet consectetur <br> adipisicing elit. Eligendi, quod.</p>
-                      <a href="" class="btn btn-warning fw-bold">Lihat Game</a>
+                      <a href="view/gamepage.html" class="btn btn-warning fw-bold">Lihat Game</a>
                     </div>
                   <!-- End Content -->
             </div>
