--- a/index.html
+++ b/index.html
@@ -1,26 +1,56 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Pameran</title>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Pameran Game</title>
 
-        <!-- CSS -->
-        <link rel="stylesheet" href="asset/css/index.css">
-        <link rel="stylesheet" href="asset/bootstrap/bootstrap-5.3.2-dist/css/bootstrap.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- CSS -->
+    <link rel="stylesheet" href="asset/css/index.css">
+    <link rel="stylesheet" href="asset/bootstrap/bootstrap-5.3.2-dist/css/bootstrap.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  </head>
+  <body>
 
-        <!-- font Awesome -->
-        <script src="https://kit.fontawesome.com/0a267e6f70.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
+    <!-- <header>
+        <h2 class="logo">Pameran Game</h2>
+        <nav class="navigation">
+            <a href="#" class="active">home<span></span></a>
+            <a href="#">About<span></span></a>
+            <a href="#">Service<span></span></a>
+            <a href="#">Contact<span></span></a>
+        </nav>
+    </header> -->
 
-    <section class="parallax">
+    <div class="banner">
+      <div class="bg bg-1"></div>
+      <h1 id="text">Pameran Game!</h1>
+      <div class="bg bg-2" id="tree-left"></div>
+      <div class="bg bg-3" id="tree-right"></div>
+      <div class="bg bg-4" id="gate-left"></div>
+      <div class="bg bg-5" id="gate-right"></div>
+      <div class="bg bg-6" id="grass"></div>
+  </div>
+
+    <!-- <section class="parallax">
         <h2 id="text">Pameran Game</h2>
-    </section>       
-        
-        <!-- Java Script -->
-        <script src="asset/bootstrap/bootstrap-5.3.2-dist/js/bootstrap.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    </body>
+        <img src="asset/img/ParallaxBackground/tree-left.png" id="tree-left" alt="">
+        <img src="asset/img/ParallaxBackground/tree-right.png" id="tree-right" alt="">
+        <img src="asset/img/ParallaxBackground/gate-left.png" id="gate-left" alt="">
+        <img src="asset/img/ParallaxBackground/gate-right.png" id="gate-right" alt="">
+        <img src="asset/img/ParallaxBackground/grass.png" id="grass" alt="">
+    </section> -->
+
+    <section class="sec">
+        <h2>Content HomePage</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic alias labore itaque? Sit quibusdam rem quisquam nostrum quasi accusantium alias necessitatibus modi corrupti labore mollitia id eum, consequatur sapiente tempora facilis adipisci aut qui maiores velit? Magni, alias soluta sequi harum incidunt consequatur ex natus ab qui voluptates, eaque at. <br> <br></p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic alias labore itaque? Sit quibusdam rem quisquam nostrum quasi accusantium alias necessitatibus modi corrupti labore mollitia id eum, consequatur sapiente tempora facilis adipisci aut qui maiores velit? Magni, alias soluta sequi harum incidunt consequatur ex natus ab qui voluptates, eaque at. <br> <br></p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic alias labore itaque? Sit quibusdam rem quisquam nostrum quasi accusantium alias necessitatibus modi corrupti labore mollitia id eum, consequatur sapiente tempora facilis adipisci aut qui maiores velit? Magni, alias soluta sequi harum incidunt consequatur ex natus ab qui voluptates, eaque at. <br> <br></p>
+    </section>
+
+    <!-- Java Script -->
+    <script src="asset/javascript/index.js"></script>
+    <script src="asset/bootstrap/bootstrap-5.3.2-dist/js/bootstrap.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  </body>
 </html>
