--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         <img src="asset/img/ParallaxBackground/grass.png" id="grass" alt="">
     </section> -->
 
-    <section class="sec">
+    <div class="sec">
         <h2>Content HomePage</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic alias labore itaque? Sit quibusdam rem quisquam nostrum quasi accusantium alias necessitatibus modi corrupti labore mollitia id eum, consequatur sapiente tempora facilis adipisci aut qui maiores velit? Magni, alias soluta sequi harum incidunt consequatur ex natus ab qui voluptates, eaque at. <br> <br></p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic alias labore itaque? Sit quibusdam rem quisquam nostrum quasi accusantium alias necessitatibus modi corrupti labore mollitia id eum, consequatur sapiente tempora facilis adipisci aut qui maiores velit? Magni, alias soluta sequi harum incidunt consequatur ex natus ab qui voluptates, eaque at. <br> <br></p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic alias labore itaque? Sit quibusdam rem quisquam nostrum quasi accusantium alias necessitatibus modi corrupti labore mollitia id eum, consequatur sapiente tempora facilis adipisci aut qui maiores velit? Magni, alias soluta sequi harum incidunt consequatur ex natus ab qui voluptates, eaque at. <br> <br></p>
-    </section>
+    </div>
 
     <!-- Java Script -->
     <script src="asset/javascript/index.js"></script>
